transform, scale, translate et rotate

--- a/index.html
+++ b/index.html
@@ -17,33 +17,115 @@
                         <p>Clicker moi</p>
                     </div>
                 </div>
+
                 <div id="form" class="container__sub">
                     <div class="form__group">
                         <label for="">email</label>
                         <input type="email" name="" id="">
                     </div>
                 </div>
+
                 <div class="container__sub">
                     <div class="transformTest" id="transformTest1">
-                        <p class="transformTest__text">Commande : transform: scale(2);</p>
+                        <p class="transformTest__text"><strong>Commande : </strong> transform: scale(2);</p>
                         <div class="transformTest__btn" id="transformTest1__btn">Transform!</div>
-                        <div class="transformTest__object" id="transformTest1__object"></div>
+                        <div class="transformTest__object scale" id="transformTest1__object"></div>
                     </div>
                 </div>
+
                 <div class="container__sub">
                     <div class="transformTest" id="transformTest2">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: scale(2,0.5);</p>
                         <div class="transformTest__btn" id="transformTest2__btn">Transform!</div>
-                        <div class="transformTest__object" id="transformTest2__object"></div>
+                        <div class="transformTest__object scale" id="transformTest2__object"></div>
+                    </div>
+                </div>
+
+                <div class="container__sub">
+                    <div class="transformTest" id="transformTest3">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: scaleX(2);;</p>
+                        <div class="transformTest__btn" id="transformTest3__btn">Transform!</div>
+                        <div class="transformTest__object scale" id="transformTest3__object"></div>
+                    </div>
+                </div>
+
+                <div class="container__sub">
+                    <div class="transformTest" id="transformTest4">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: scaleY(2);;</p>
+                        <div class="transformTest__btn" id="transformTest4__btn">Transform!</div>
+                        <div class="transformTest__object scale" id="transformTest4__object"></div>
+                    </div>
+                </div>
+
+                <div class="container__sub">
+                    <div class="transformTest " id="transformTest5">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: translate(100%, 100%);</p>
+                        <div class="transformTest__btn" id="transformTest5__btn">Transform!</div>
+                        <div class="transformTest__object translate" id="transformTest5__object"></div>
+                    </div>
+                </div>
+
+                <div class="container__sub">
+                    <div class="transformTest " id="transformTest6">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: translate(-100%, -100%);</p>
+                        <div class="transformTest__btn" id="transformTest6__btn">Transform!</div>
+                        <div class="transformTest__object translate" id="transformTest6__object"></div>
+                    </div>
+                </div>
+
+                <div class="container__sub">
+                    <div class="transformTest " id="transformTest7">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: translateX(100px);</p>
+                        <div class="transformTest__btn" id="transformTest7__btn">Transform!</div>
+                        <div class="transformTest__object translate" id="transformTest7__object"></div>
+                    </div>
+                </div>
+
+                <div class="container__sub">
+                    <div class="transformTest " id="transformTest8">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: translateX(-100px);</p>
+                        <div class="transformTest__btn" id="transformTest8__btn">Transform!</div>
+                        <div class="transformTest__object translate" id="transformTest8__object"></div>
+                    </div>
+                </div>
+
+                <div class="container__sub">
+                    <div class="transformTest " id="transformTest9">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: translateY(100px);</p>
+                        <div class="transformTest__btn" id="transformTest9__btn">Transform!</div>
+                        <div class="transformTest__object translate" id="transformTest9__object"></div>
+                    </div>
+                </div>
+
+                <div class="container__sub">
+                    <div class="transformTest " id="transformTest10">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: translateY(-100px);</p>
+                        <div class="transformTest__btn" id="transformTest10__btn">Transform!</div>
+                        <div class="transformTest__object translate" id="transformTest10__object"></div>
+                    </div>
+                </div>
+
+                <div class="container__sub">
+                    <div class="transformTest " id="transformTest11">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: translate(200%) scaleY(2);</p>
+                        <div class="transformTest__btn" id="transformTest11__btn">Transform!</div>
+                        <div class="transformTest__object translate" id="transformTest11__object"></div>
                     </div>
                 </div>
                 <div class="container__sub">
-                    <div class="transformTest" id="transformTest3">
-                        <div class="transformTest__btn" id="transformTest3__btn">Transform!</div>
-                        <div class="transformTest__object" id="transformTest3__object"></div>
+                    <div class="transformTest " id="transformTest12">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: rotate(90deg);</p>
+                        <div class="transformTest__btn" id="transformTest12__btn">Transform!</div>
+                        <div class="transformTest__object rotate" id="transformTest12__object"></div>
                     </div>
                 </div>
-                <div class="container__sub"></div>
-                <div class="container__sub"></div>
+                <div class="container__sub">
+                    <div class="transformTest " id="transformTest13">
+                        <p class="transformTest__text"><strong>Commande : </strong>transform: rotate(1turn); = 360deg</p>
+                        <div class="transformTest__btn" id="transformTest13__btn">Transform!</div>
+                        <div class="transformTest__object rotate" id="transformTest13__object"></div>
+                    </div>
+                </div>
             </div>
         
         </main>
